React to semantic markup of post content.

--- a/index.htm
+++ b/index.htm
@@ -25,6 +25,8 @@
     <title>Journal</title>
     <script type="text/javascript" src="scripts/AJAX.js"></script>
     <script type="text/javascript" src="scripts/WordPress.js"></script>
+    <script type="text/javascript" src="scripts/CharacterStream.js"></script>
+    <script type="text/javascript" src="scripts/JsStAX.js"></script>
     <script type="text/javascript" src="scripts/Journal.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
