--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <script type="text/javascript" src="scripts/WordPress.js"></script>
     <script type="text/javascript" src="scripts/CharacterStream.js"></script>
     <script type="text/javascript" src="scripts/JsStAX.js"></script>
+    <script type="text/javascript" src="scripts/Posts.js"></script>
+    <script type="text/javascript" src="scripts/HyperGlossary.js"></script>
     <script type="text/javascript" src="scripts/Journal.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
