--- a/view.html
+++ b/view.html
@@ -23,12 +23,18 @@
     along with Journal. If not, see <http://www.gnu.org/licenses/>.
     -->
     <title>Journal</title>
+    <script type="text/javascript" src="scripts/AJAX.js"></script>
+    <script type="text/javascript" src="scripts/WordPress.js"></script>
+    <script type="text/javascript" src="scripts/CharacterStream.js"></script>
+    <script type="text/javascript" src="scripts/JsStAX.js"></script>
+    <script type="text/javascript" src="scripts/Posts.js"></script>
+    <script type="text/javascript" src="scripts/HyperGlossary.js"></script>
+    <script type="text/javascript" src="scripts/Journal.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
-  <body>
-    <ul>
-      <li>
-        <a href="view.html">View</a>
-      </li>
-    </ul>
+  <body onload="LoadJournal();">
+    <div id="content">
+
+    </div>
   </body>
 </html>
