--- a/view.html
+++ b/view.html
@@ -34,7 +34,12 @@
   </head>
   <body onload="LoadJournal();">
     <div id="content">
+      <div id="content-pane">
 
+      </div>
+      <div id="glossary-pane">
+        <h2>Glossary</h2>
+      </div>
     </div>
   </body>
 </html>
